--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,5 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             push: true
-            tags: nameyuriy/infra_actions:latest
+            tags: ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest
 
